<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin8dp">

        <TextView
            android:id="@+id/card_lblName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginEnd="@dimen/margin8dp"
            app:layout_constraintEnd_toStartOf="@+id/card_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/card_lblEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginEnd="@dimen/margin8dp"
            app:layout_constraintEnd_toStartOf="@+id/card_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_lblName"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/card_lblPhonenumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin8dp"
            android:layout_marginEnd="@dimen/margin8dp"
            app:layout_constraintEnd_toStartOf="@+id/card_imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_lblEmail"
            tools:text="@tools:sample/us_phones" />

        <Button
            android:id="@+id/card_btnEdit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/main_lblEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_lblPhonenumber" />

        <Button
            android:id="@+id/card_btnDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_lblDelete"
            app:layout_constraintStart_toEndOf="@+id/card_btnEdit"
            app:layout_constraintTop_toBottomOf="@+id/card_lblPhonenumber" />

        <ImageView
            android:id="@+id/card_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin8dp"
            android:layout_marginEnd="@dimen/margin8dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="@+id/card_lblPhonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cat1"
            android:contentDescription="@string/card_imageViewAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>